k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-java-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-java-app
  template:
    metadata:
      labels:
        app: sample-java-app
    spec:
      containers:
        - name: sample-java-app
          image: docker.io/kavitamil13/sample-java-app:__IMAGE_TAG__
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
