k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-java-app-service
spec:
  type: NodePort
  selector:
    app: sample-java-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
